[tool.poetry]
name = "cmstk"
version = "0.1.0"
description = "Computational Materials Science Tool Kit"
authors = ["Seaton Ullberg <sullberg@ufl.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1.1"
numpy = "^1.17.2"
scipy = "^1.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.730"
pytest = "^5.2.1"
yapf = "^0.28.0"
