[tool.poetry]
name = "cmstk"
version = "0.1.0"
description = "Computational Materials Science Tool Kit"
authors = ["Seaton Ullberg"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.6"
matplotlib = "^3.1.3"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
yapf = "^0.29.0"
pytest = "^5.3.5"
pyflakes = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
